--- a/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-expand-lg blur border-radius-lg top-0 z-index-3 shadow position-absolute mt-4 py-2 start-0 end-0 mx-4">
           <div class="container-fluid ps-2 pe-0">
             <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/dashboard/">
-              Material Dashboard 2
+              Metadata Dashboard
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
@@ -27,8 +27,8 @@
               <ul class="navbar-nav d-lg-block d-none">
                 <li class="nav-item">
                   <a target="_blank" 
-                     href="https://appseed.us/admin-dashboards/django-dashboard-material" 
-                     class="btn btn-sm mb-0 me-1 bg-gradient-dark">Free download</a>
+                     href="/"
+                     class="btn btn-sm mb-0 me-1 bg-gradient-dark">Main</a>
                 </li>
               </ul>
             </div>
