--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -25,6 +25,7 @@
               <a href="https://www.facebook.com/MaineEPSCoR/"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
               <a href="https://www.instagram.com/maine.epscor"><i class="fab fa-instagram text-lg text-white me-4"></i></a>
               <a href="https://twitter.com/maineepscor"><i class="fab fa-twitter text-lg text-white me-4"></i></a>
+              <a href="https://github.com/maine-edna/medna-metadata"><i class="fa fa-github text-lg text-white"></i></a>
               <a href="https://umaine.edu/edna/"><i class="fas fa-home text-lg text-white"></i></a>
             </div>
           </div>
@@ -34,66 +35,52 @@
   </header>
 
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
-    <!-- Section with four info areas left & one card right with image and waves -->
-    <section class="py-7">
+    <!-- START about-us image & text & info -->
+    <section class="py-sm-7 py-5 position-relative">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="row justify-content-start">
-              <div class="col-md-6">
-                <div class="info">
-                  <i class="material-icons text-3xl text-gradient text-info mb-3">public</i>
-                  <h5>Fully integrated</h5>
-                  <p>We get insulted by others, lose trust for those We get back freezes</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info">
-                  <i class="material-icons text-3xl text-gradient text-info mb-3">payments</i>
-                  <h5>Payments functionality</h5>
-                  <p>We get insulted by others, lose trust for those We get back freezes</p>
-                </div>
-              </div>
+        <div class="row">
+          <div class="col-12 mx-auto">
+            <div class="mt-n8 mt-md-n9 text-center">
+              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{% static 'assets/img/bruce-mars.jpg' %}" alt="bruce" loading="lazy">
             </div>
-            <div class="row justify-content-start mt-4">
-              <div class="col-md-6">
-                <div class="info">
-                  <i class="material-icons text-3xl text-gradient text-info mb-3">apps</i>
-                  <h5>Prebuilt components</h5>
-                  <p>We get insulted by others, lose trust for those We get back freezes</p>
+            <div class="row py-5">
+              <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <h3 class="mb-0">Michael Roven</h3>
+                  <div class="d-block">
+                    <button type="button" class="btn btn-sm btn-outline-info text-nowrap mb-0">Follow</button>
+                  </div>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info">
-                  <i class="material-icons text-3xl text-gradient text-info mb-3">3p</i>
-                  <h5>Improved platform</h5>
-                  <p>We get insulted by others, lose trust for those We get back freezes</p>
+                <div class="row mb-4">
+                  <div class="col-auto">
+                    <span class="h6">323</span>
+                    <span>Posts</span>
+                  </div>
+                  <div class="col-auto">
+                    <span class="h6">3.5k</span>
+                    <span>Followers</span>
+                  </div>
+                  <div class="col-auto">
+                    <span class="h6">260</span>
+                    <span>Following</span>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 ms-auto mt-lg-0 mt-4">
-            <div class="card">
-              <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                <a class="d-block blur-shadow-image">
-                  <img src="https://images.unsplash.com/photo-1544717302-de2939b7ef71?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="img-colored-shadow" class="img-fluid border-radius-lg">
-                </a>
-              </div>
-              <div class="card-body text-center">
-                <h5 class="font-weight-normal">
-                  <a href="javascript:;">Get insights on Search</a>
-                </h5>
-                <p class="mb-0">
-                  Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.
+                <p class="text-lg mb-0">
+                  Decisions: If you can’t decide, the answer is no.
+                  If two equally difficult paths, choose the one more
+                  painful in the short term (pain avoidance is creating
+                  an illusion of equality). Choose the path that leaves
+                  you more equanimous. <br><a href="javascript:;" class="text-info icon-move-right">More about me
+                    <i class="fas fa-arrow-right text-sm ms-1"></i>
+                  </a>
                 </p>
-                <button type="button" class="btn bg-gradient-info btn-sm mb-0 mt-3">Find out more</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- END Section with four info areas left & one card right with image and waves -->
+    <!-- END about-us image & text & info -->
     <!-- -------- START Features w/ pattern background & stats & rocket -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3">
       <div class="container">
@@ -190,161 +177,12 @@
       </div>
     </section>
     <!-- -------- END Features w/ pattern background & stats & rocket -------- -->
-    <section class="pt-4 pb-6" id="count-stats">
-      <div class="container">
-        <div class="row mb-7">
-          <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'assets/img/logos/gray-logos/logo-coinbase.svg' %}" alt="logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'assets/img/logos/gray-logos/logo-nasa.svg' %}" alt="logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'assets/img/logos/gray-logos/logo-netflix.svg' %}" alt="logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'assets/img/logos/gray-logos/logo-pinterest.svg' %}" alt="logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'assets/img/logos/gray-logos/logo-spotify.svg' %}" alt="logo">
-          </div>
-          <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'assets/img/logos/gray-logos/logo-vodafone.svg' %}" alt="logo">
-          </div>
-        </div>
-        <div class="row justify-content-center text-center">
-          <div class="col-md-3">
-            <h1 class="text-gradient text-info" id="state1" countTo="5234">0</h1>
-            <h5>Projects</h5>
-            <p>Of “high-performing” level are led by a certified project manager</p>
-          </div>
-          <div class="col-md-3">
-            <h1 class="text-gradient text-info"><span id="state2" countTo="3400">0</span>+</h1>
-            <h5>Hours</h5>
-            <p>That meets quality standards required by our users</p>
-          </div>
-          <div class="col-md-3">
-            <h1 class="text-gradient text-info"><span id="state3" countTo="24">0</span>/7</h1>
-            <h5>Support</h5>
-            <p>Actively engage team members that finishes on time</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- -------- START PRE-FOOTER 1 w/ SUBSCRIBE BUTTON AND IMAGE ------- -->
-    <section class="my-5 pt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 m-auto">
-            <h4>Be the first to see the news</h4>
-            <p class="mb-4">
-              Your company may not be in the software business,
-              but eventually, a software company will be in your business.
-            </p>
-            <div class="row">
-              <div class="col-8">
-                <div class="input-group input-group-outline">
-                  <label class="form-label">Email Here...</label>
-                  <input type="text" class="form-control mb-sm-0">
-                </div>
-              </div>
-              <div class="col-4 ps-0">
-                <button type="button" class="btn bg-gradient-info mb-0 h-100 position-relative z-index-2">Subscribe</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-5 ms-auto">
-            <div class="position-relative">
-              <img class="max-width-50 w-100 position-relative z-index-2" src="{% static 'assets/img/macbook.png' %}" alt="image">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- -------- END PRE-FOOTER 1 w/ SUBSCRIBE BUTTON AND IMAGE ------- -->
   </div>
 
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
-
-  <script>
-    // get the element to animate
-    var element = document.getElementById('count-stats');
-    var elementHeight = element.clientHeight;
-
-    // listen for scroll event and call animate function
-
-    document.addEventListener('scroll', animate);
-
-    // check if element is in view
-    function inView() {
-      // get window height
-      var windowHeight = window.innerHeight;
-      // get number of pixels that the document is scrolled
-      var scrollY = window.scrollY || window.pageYOffset;
-      // get current scroll position (distance from the top of the page to the bottom of the current viewport)
-      var scrollPosition = scrollY + windowHeight;
-      // get element position (distance from the top of the page to the bottom of the element)
-      var elementPosition = element.getBoundingClientRect().top + scrollY + elementHeight;
-
-      // is scroll position greater than element position? (is element in view?)
-      if (scrollPosition > elementPosition) {
-        return true;
-      }
-
-      return false;
-    }
-
-    var animateComplete = true;
-    // animate element when it is in view
-    function animate() {
-
-      // is element in view?
-      if (inView()) {
-        if (animateComplete) {
-          if (document.getElementById('state1')) {
-            const countUp = new CountUp('state1', document.getElementById("state1").getAttribute("countTo"));
-            if (!countUp.error) {
-              countUp.start();
-            } else {
-              console.error(countUp.error);
-            }
-          }
-          if (document.getElementById('state2')) {
-            const countUp1 = new CountUp('state2', document.getElementById("state2").getAttribute("countTo"));
-            if (!countUp1.error) {
-              countUp1.start();
-            } else {
-              console.error(countUp1.error);
-            }
-          }
-          if (document.getElementById('state3')) {
-            const countUp2 = new CountUp('state3', document.getElementById("state3").getAttribute("countTo"));
-            if (!countUp2.error) {
-              countUp2.start();
-            } else {
-              console.error(countUp2.error);
-            };
-          }
-          animateComplete = false;
-        }
-      }
-    }
-
-    if (document.getElementById('typed')) {
-      var typed = new Typed("#typed", {
-        stringsElement: '#typed-strings',
-        typeSpeed: 90,
-        backSpeed: 90,
-        backDelay: 200,
-        startDelay: 500,
-        loop: true
-      });
-    }
-  </script>
-
   <script>
     if (document.getElementsByClassName('page-header')) {
       window.onscroll = debounce(function() {
