--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -36,39 +36,39 @@
 
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <!-- START about-us image & text & info -->
-    <section class="py-sm-7 py-5 position-relative">
+    <section class="my-5">
       <div class="container">
         <div class="row">
-          <div class="col-12 mx-auto">
-            <div class="mt-n8 mt-md-n9 text-center">
-              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{% static 'assets/img/logo-medna-metadata.png' %}" alt="bruce" loading="lazy">
-            </div>
-            <div class="row py-5">
-              <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                  <h3 class="mb-0">Michael Roven</h3>
-                </div>
-                <p class="text-lg mb-0">
-                  The Sequencing and Bioinformatics Metadata project is funded through the Maine-eDNA RII Track-1 EPSCoR
-                  grant supported by the National Science Foundation award #OIA-1849227. Maine-eDNA is a Maine coast-wide
-                  research effort to determine the efficacy of ecosystem monitoring through environmental DNA (eDNA).
-                  The metadata project is directly related to the goals of Theme 3: Macrosystem eDNA Integration, but also
-                  involved in Theme 1: Sustainable Fisheries and Theme 2: Harmful and Shifting Species. Our efforts
-                  contribute to the Data Management and Data Analysis Pipeline work groups. <br>
-                  The Sequencing and Bioinformatics Metadata project is a collaboration between the Coordinated Operating
-                  Research Entities (CORE) environmental DNA (eDNA) Laboratory and the Data Management Team to facilitate
-                  the development of a web application for the management and tracking of eDNA samples.  <br>
-                  <a href="https://umaine.edu/edna/" class="text-info icon-move-right">More about Maine-eDNA
-                    <i class="fas fa-arrow-right text-sm ms-1"></i>
-                  </a>
-                </p>
-              </div>
-            </div>
+          <div class="col-md-7 col-12 my-auto">
+            <h3>About us</h3>
+            <p class="pe-md-5 mb-4">
+              The Sequencing and Bioinformatics Metadata project is funded through the Maine-eDNA RII Track-1 EPSCoR
+              grant supported by the National Science Foundation award #OIA-1849227. Maine-eDNA is a Maine coast-wide
+              research effort to determine the efficacy of ecosystem monitoring through environmental DNA (eDNA).
+              The metadata project is directly related to the goals of Theme 3: Macrosystem eDNA Integration, but also
+              involved in Theme 1: Sustainable Fisheries and Theme 2: Harmful and Shifting Species. Our efforts
+              contribute to the Data Management and Data Analysis Pipeline work groups. <br> <br>
+              The Sequencing and Bioinformatics Metadata project is a collaboration between the Coordinated Operating
+              Research Entities (CORE) environmental DNA (eDNA) Laboratory and the Data Management Team to facilitate
+              the development of a web application for the management and tracking of eDNA samples.  <br>
+              <a href="https://umaine.edu/edna/" class="text-info icon-move-right">More about Maine-eDNA
+                <i class="fas fa-arrow-right text-sm ms-1"></i>
+              </a>
+            </p>
+          </div>
+          <div class="col-md-5 col-12 my-auto">
+            <a target="_blank" href="https://github.com/Maine-eDNA/medna-metadata">
+              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/logo-medna-metadata.png' %}" alt="medna-metadata logo">
+            </a>
           </div>
         </div>
       </div>
     </section>
     <!-- END about-us image & text & info -->
+    <div class="container mt-sm-5">
+      <div class="page-header py-6 py-md-5 my-sm-3 mb-3 border-radius-xl" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
+      </div>
+    </div>
     <!-- -------- START Features w/ pattern background & stats & rocket -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3">
       <div class="container">
