--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="col-md-12 col-12 my-auto">
-        <div class="page-header py-6 py-md-5 my-sm-3 mb-3 border-radius-xl" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
+        <div class="w-100 border-radius-lg shadow-lg" style="background-image: url('{% static 'assets/img/logo-tri-nsf-statement.jpg' %}');" loading="lazy">
         </div>
       </div>
     </section>
