--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -212,7 +212,7 @@
               <div class="col-md-4 mt-md-0 mt-4">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-ce-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-ce-homepage.png' %}"
                          alt="cooperative extension" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
                   </div>
                   <div class="mt-2 ms-2">
@@ -221,10 +221,12 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mt-md-0 mt-4">
+            </div>
+            <div class="row mt-3">
+              <div class="col-md-4 mt-md-0 mt-3">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-usm-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-usm-homepage.png' %}"
                          alt="usm" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
                   </div>
                   <div class="mt-2 ms-2">
@@ -233,12 +235,10 @@
                   </div>
                 </a>
               </div>
-            </div>
-            <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-3">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-une-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-une-homepage.png' %}"
                          alt="une" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
                   </div>
                   <div class="mt-2 ms-2">
@@ -250,7 +250,7 @@
               <div class="col-md-4 mt-md-0 mt-3">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-umm-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-umm-homepage.png' %}"
                          alt="umm" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
                   </div>
                   <div class="mt-2 ms-2">
@@ -264,7 +264,7 @@
               <div class="col-md-4 mt-md-0 mt-4">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-smcc-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-smcc-homepage.png' %}"
                          alt="smcc" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element" >
                   </div>
                   <div class="mt-2 ms-2">
@@ -276,7 +276,7 @@
               <div class="col-md-4 mt-md-0 mt-4">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-colby-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-colby-homepage.png' %}"
                          alt="colby" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element">
                   </div>
                   <div class="mt-2 ms-2">
@@ -288,7 +288,7 @@
               <div class="col-md-4 mt-md-0 mt-4">
                 <a href="javascript:;" target="_blank" >
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
-                    <img class="w-100 my-auto opacity-6" src="{% static 'assets/img/screenshots/screenshot-gmri-homepage.png' %}"
+                    <img class="w-100 my-auto" src="{% static 'assets/img/screenshots/screenshot-gmri-homepage.png' %}"
                          alt="gmri" data-bs-toggle="tooltip" data-bs-placement="top" title="Pro Element" >
                   </div>
                   <div class="mt-2 ms-2">
