--- a/frontend/templates/home/django-material-kit/api.html
+++ b/frontend/templates/home/django-material-kit/api.html
@@ -12,14 +12,14 @@
 
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
-  <div class="page-header min-vh-80" style="background-image: url('https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')">
+  <div class="page-header min-vh-80" style="background-image: url('https://images.unsplash.com/photo-1631715844914-a8a08d1535d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">Your title here</h1>
-            <h3 class="text-white">Subtitle</h3>
+            <h1 class="text-white">Application Programming Interface</h1>
+            <p class="lead mb-4 text-white opacity-8">Programmatic entry into the metadata database.</p>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
       <div class="section text-center">
-        <h2 class="title">Your main section here</h2>
+        <h2 class="title">Content coming soon...</h2>
       </div>
     </div>
   </div>
