--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -31,21 +31,26 @@
         <h2 class="title">Content coming soon...</h2>
 
         <!-- -------- START Grids -------- -->
-        <h3>h2. Bootstrap heading</h3>
-        <div class="row">
-          <div class="col">
-            <p class="lead">
-              Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
-            </p>
+        <section class="py-9">
+          <div class="container">
+<!-- -------- START loop -------- -->
+            <h3 class="text-start">h2. Bootstrap heading</h3>
+            <div class="row">
+              <div class="col">
+                <p class="lead">
+                  Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
+                </p>
+              </div>
+              <div class="col">
+                <p class="lead">
+                  Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
+                </p>
+              </div>
+              <div class="w-100"></div>
+            </div>
+<!-- -------- END loop -------- -->
           </div>
-          <div class="col">
-            <p class="lead">
-              Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
-            </p>
-          </div>
-          <div class="w-100"></div>
-        </div>
-
+        </section>
         <!-- -------- END Grids -------- -->
 
       </div>
