--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -28,22 +28,22 @@
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
       <div class="section text-center">
-        <h2 class="title">Content coming soon...</h2>
-
         <!-- -------- START Grids -------- -->
         <section class="py-9">
           <div class="container">
 <!-- -------- START loop -------- -->
-            <h3 class="text-start">h2. Bootstrap heading</h3>
+            {% if projects_list %}
+            {% for project in projects_list %}
+            <h3 class="text-start">{{ project.project_label }}</h3>
             <div class="row">
               <div class="col">
                 <p class="lead">
-                  Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
+                  {{ project.project_description }}
                 </p>
               </div>
               <div class="col">
                 <p class="lead">
-                  Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
+                  {{ project.project_goals }}
                 </p>
               </div>
               <div class="w-100"></div>
@@ -52,7 +52,6 @@
           </div>
         </section>
         <!-- -------- END Grids -------- -->
-
       </div>
     </div>
   </div>
