--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -34,20 +34,21 @@
 <!-- -------- START loop -------- -->
             {% if projects_list %}
             {% for project in projects_list %}
-            <h3 class="text-start">{{ project.project_label }}</h3>
-            <div class="row">
-              <div class="col">
-                <p class="lead">
-                  {{ project.project_description }}
-                </p>
+              <h3 class="text-start">{{ project.project_label }}</h3>
+              <div class="row">
+                 <div class="col">
+                   <p class="lead">
+                     {{ project.project_description }}
+                   </p>
+                 </div>
+                 <div class="col">
+                   <p class="lead">
+                     {{ project.project_goals }}
+                   </p>
+                 </div>
+                 <div class="w-100"></div>
               </div>
-              <div class="col">
-                <p class="lead">
-                  {{ project.project_goals }}
-                </p>
-              </div>
-              <div class="w-100"></div>
-            </div>
+              {% endfor %}
 <!-- -------- END loop -------- -->
           </div>
         </section>
