--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column">
             <h3 class="text-center">Update Profile</h3>
-            <form role="form" id="contact-form" method="post" autocomplete="off">
+            <form role="form" method="post" autocomplete="off">
               {% csrf_token %}
               {{ form }}
               <div class="col-md-12">
