--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -14,10 +14,11 @@
         <span class="mask bg-gradient-dark opacity-6"></span>
       </div>
       <div class="card card-body mx-3 mx-md-4 mt-n6">
-        <div class="row">
-          <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column">
+
+        <div class="row gx-4 mb-2">
+          <div class="col-auto">
             <h3 class="text-center">Update Profile</h3>
-            <form role="form" method="post" autocomplete="off">
+            <form role="form" id="contact-form" method="post" autocomplete="off">
               {% csrf_token %}
               {{ form }}
               <div class="col-md-12">
